--- a/sass/style.scss
+++ b/sass/style.scss
@@ -3,65 +3,72 @@
   padding: 0;
   border: 0;
   vertical-align: baseline;
-  user-select: none; }
-
+  user-select: none;
+}
 html {
-  box-sizing: border-box; }
-
+  box-sizing: border-box;
+}
 *,
 *:before,
 *:after {
-  box-sizing: inherit; }
-
+  box-sizing: inherit;
+}
 html,
 body {
   height: 100%;
   margin: 0;
-  background-color: transparent; }
+  background-color: transparent;
+}
 
 body {
   font-family: "Segoe UI", sans-serif;
   background: #1a2933;
-  color: #fff; }
-
+  color: #fff;
+}
 h1 {
   margin: 0 0 0 0;
   font-weight: 600;
-  line-height: 1.2; }
-
+  line-height: 1.2;
+}
 p {
   margin-top: 10px;
-  color: gray; }
+  color: gray;
+}
 
 /*-------------------*/
 body {
   border: 1px solid #48545c;
-  overflow-y: hidden; }
+  overflow-y: hidden;
+}
 
 #titlebar {
   display: block;
   position: fixed;
   height: 32px;
-  width: calc(100% - 2px);
-  /*Compensate for body 1px border*/
-  background: #254053; }
+  width: calc(100% - 2px); /*Compensate for body 1px border*/
+  background: #254053;
+}
 
 #main {
   height: calc(100% - 32px);
   margin-top: 32px;
   padding: 20px;
-  overflow-y: auto; }
+  overflow-y: auto;
+}
 
 #titlebar {
-  padding: 4px; }
+  padding: 4px;
+}
 
 #titlebar #drag-region {
   width: 100%;
   height: 100%;
-  -webkit-app-region: drag; }
+  -webkit-app-region: drag;
+}
 
 #titlebar {
-  color: #fff; }
+  color: #fff;
+}
 
 #sys-btns {
   display: grid;
@@ -69,7 +76,8 @@ body {
   position: absolute;
   top: 0;
   right: 0;
-  height: 100%; }
+  height: 100%;
+}
 
 #sys-btns .button {
   grid-row: 1 / span 1;
@@ -77,50 +85,63 @@ body {
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 100%; }
-
+  height: 100%;
+}
 #min-button {
-  grid-column: 1; }
-
+  grid-column: 1;
+}
 #max-button,
 #restore-button {
-  grid-column: 2; }
-
+  grid-column: 2;
+}
 #close-button {
-  grid-column: 3; }
+  grid-column: 3;
+}
 
-@media (-webkit-device-pixel-ratio: 1.5), (device-pixel-ratio: 1.5), (-webkit-device-pixel-ratio: 2), (device-pixel-ratio: 2), (-webkit-device-pixel-ratio: 3), (device-pixel-ratio: 3) {
+@media (-webkit-device-pixel-ratio: 1.5),
+  (device-pixel-ratio: 1.5),
+  (-webkit-device-pixel-ratio: 2),
+  (device-pixel-ratio: 2),
+  (-webkit-device-pixel-ratio: 3),
+  (device-pixel-ratio: 3) {
   #sys-btns .icon {
     width: 10px;
-    height: 10px; } }
+    height: 10px;
+  }
+}
 
 #sys-btns {
-  -webkit-app-region: no-drag; }
+  -webkit-app-region: no-drag;
+}
 
 #sys-btns .button {
-  user-select: none; }
-
+  user-select: none;
+}
 #sys-btns .button:hover {
-  background: rgba(255, 255, 255, 0.1); }
-
+  background: rgba(255, 255, 255, 0.1);
+}
 #sys-btns .button:active {
-  background: rgba(255, 255, 255, 0.2); }
+  background: rgba(255, 255, 255, 0.2);
+}
 
 #close-button:hover {
-  background: #e81123 !important; }
-
+  background: #e81123 !important;
+}
 #close-button:active {
-  filter: brightness(80%); }
-
+  filter: brightness(80%);
+}
 #close-button:active .icon {
-  filter: invert(1); }
+  filter: invert(1);
+}
 
 #restore-button {
-  display: none !important; }
+  display: none !important;
+}
 
 #titlebar #drag-region {
   display: grid;
-  grid-template-columns: auto 138px; }
+  grid-template-columns: auto 138px;
+}
 
 #window-title {
   grid-column: 1;
@@ -129,31 +150,38 @@ body {
   margin-left: 8px;
   overflow: hidden;
   font-family: "Segoe UI", sans-serif;
-  font-size: 12px; }
+  font-size: 12px;
+}
 
 #window-title span {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-  line-height: 1.5; }
+  line-height: 1.5;
+}
 
 .maximized #titlebar {
   width: 100%;
-  padding: 0; }
+  padding: 0;
+}
 
 .maximized #window-title {
-  margin-left: 12px; }
+  margin-left: 12px;
+}
 
 .maximized #restore-button {
-  display: flex !important; }
+  display: flex !important;
+}
 
 .maximized #max-button {
-  display: none; }
+  display: none;
+}
 
 textarea {
-  width: 100%; }
-
+  width: 100%;
+}
 .textwrapper {
   border: 1px solid #999999;
   margin: 5px 0;
-  padding: 3px; }
+  padding: 3px;
+}
