--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,10 +1,5 @@
-* {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  vertical-align: baseline;
-  user-select: none;
-}
+@import "./_utils";
+
 html {
   box-sizing: border-box;
 }
@@ -17,28 +12,18 @@ html,
 body {
   height: 100%;
   margin: 0;
-  background-color: transparent;
 }
 
 body {
   font-family: "Segoe UI", sans-serif;
   background: #1a2933;
-  color: #fff;
-}
-h1 {
-  margin: 0 0 0 0;
-  font-weight: 600;
-  line-height: 1.2;
-}
-p {
-  margin-top: 10px;
-  color: gray;
 }
 
 /*-------------------*/
 body {
   border: 1px solid #48545c;
   overflow-y: hidden;
+  color: #fff;
 }
 
 #titlebar {
@@ -47,27 +32,34 @@ body {
   height: 32px;
   width: calc(100% - 2px); /*Compensate for body 1px border*/
   background: #254053;
-}
-
-#main {
-  height: calc(100% - 32px);
-  margin-top: 32px;
-  padding: 20px;
-  overflow-y: auto;
-}
-
-#titlebar {
   padding: 4px;
-}
-
-#titlebar #drag-region {
-  width: 100%;
-  height: 100%;
-  -webkit-app-region: drag;
-}
-
-#titlebar {
   color: #fff;
+
+  #drag-region {
+    display: grid;
+    width: 100%;
+    height: 100%;
+    -webkit-app-region: drag;
+    grid-template-columns: auto 138px;
+  }
+}
+
+#caption {
+  grid-column: 1;
+  display: flex;
+  align-items: center;
+  margin-left: 8px;
+  overflow: hidden;
+  font-family: "Segoe UI", sans-serif;
+  // font-size: calc(12 / 16) rem;
+  font-size: rem(12px);
+
+  span {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    line-height: 1.5;
+  }
 }
 
 #sys-btns {
@@ -77,25 +69,47 @@ body {
   top: 0;
   right: 0;
   height: 100%;
-}
 
-#sys-btns .button {
-  grid-row: 1 / span 1;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-}
-#min-button {
-  grid-column: 1;
-}
-#max-button,
+  -webkit-app-region: no-drag;
+
+  .button {
+    grid-row: 1 / span 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+
+    &:hover {
+      background: rgba(255, 255, 255, 0.1);
+    }
+    &:active {
+      background: rgba(255, 255, 255, 0.2);
+    }
+  }
+
+  #min-button {
+    grid-column: 1;
+  }
+  #max-button,
+  #restore-button {
+    grid-column: 2;
+  }
+
+  #close-button {
+    grid-column: 3;
+    &:hover {
+      background: #e81123 !important;
+    }
+    &:active {
+      filter: brightness(80%);
+    }
+  }
+} // #sys-btns
+
 #restore-button {
-  grid-column: 2;
-}
-#close-button {
-  grid-column: 3;
+  // not work in #sys-btn scope.
+  display: none !important;
 }
 
 @media (-webkit-device-pixel-ratio: 1.5),
@@ -110,71 +124,31 @@ body {
   }
 }
 
-#sys-btns {
-  -webkit-app-region: no-drag;
+.maximized {
+  #titlebar {
+    width: 100%;
+    padding: 0;
+  }
+
+  #window-title {
+    margin-left: 12px;
+  }
+
+  #restore-button {
+    display: flex !important;
+  }
+
+  #max-button {
+    display: none;
+  }
 }
 
-#sys-btns .button {
-  user-select: none;
-}
-#sys-btns .button:hover {
-  background: rgba(255, 255, 255, 0.1);
-}
-#sys-btns .button:active {
-  background: rgba(255, 255, 255, 0.2);
-}
-
-#close-button:hover {
-  background: #e81123 !important;
-}
-#close-button:active {
-  filter: brightness(80%);
-}
-#close-button:active .icon {
-  filter: invert(1);
-}
-
-#restore-button {
-  display: none !important;
-}
-
-#titlebar #drag-region {
-  display: grid;
-  grid-template-columns: auto 138px;
-}
-
-#window-title {
-  grid-column: 1;
-  display: flex;
-  align-items: center;
-  margin-left: 8px;
-  overflow: hidden;
-  font-family: "Segoe UI", sans-serif;
-  font-size: 12px;
-}
-
-#window-title span {
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  line-height: 1.5;
-}
-
-.maximized #titlebar {
-  width: 100%;
-  padding: 0;
-}
-
-.maximized #window-title {
-  margin-left: 12px;
-}
-
-.maximized #restore-button {
-  display: flex !important;
-}
-
-.maximized #max-button {
-  display: none;
+// content sections
+#main {
+  height: calc(100% - 32px);
+  margin-top: 32px;
+  padding: 20px;
+  overflow-y: auto;
 }
 
 textarea {
@@ -184,4 +158,8 @@ textarea {
   border: 1px solid #999999;
   margin: 5px 0;
   padding: 3px;
+}
+p {
+  margin-top: 10px;
+  color: gray;
 }
