--- a/style.css
+++ b/style.css
@@ -1,10 +1,3 @@
-* {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  vertical-align: baseline;
-  user-select: none; }
-
 html {
   box-sizing: border-box; }
 
@@ -16,27 +9,17 @@ html {
 html,
 body {
   height: 100%;
-  margin: 0;
-  background-color: transparent; }
+  margin: 0; }
 
 body {
   font-family: "Segoe UI", sans-serif;
-  background: #1a2933;
-  color: #fff; }
-
-h1 {
-  margin: 0 0 0 0;
-  font-weight: 600;
-  line-height: 1.2; }
-
-p {
-  margin-top: 10px;
-  color: gray; }
+  background: #1a2933; }
 
 /*-------------------*/
 body {
   border: 1px solid #48545c;
-  overflow-y: hidden; }
+  overflow-y: hidden;
+  color: #fff; }
 
 #titlebar {
   display: block;
@@ -44,24 +27,29 @@ body {
   height: 32px;
   width: calc(100% - 2px);
   /*Compensate for body 1px border*/
-  background: #254053; }
-
-#main {
-  height: calc(100% - 32px);
-  margin-top: 32px;
-  padding: 20px;
-  overflow-y: auto; }
-
-#titlebar {
-  padding: 4px; }
-
-#titlebar #drag-region {
-  width: 100%;
-  height: 100%;
-  -webkit-app-region: drag; }
-
-#titlebar {
+  background: #254053;
+  padding: 4px;
   color: #fff; }
+  #titlebar #drag-region {
+    display: grid;
+    width: 100%;
+    height: 100%;
+    -webkit-app-region: drag;
+    grid-template-columns: auto 138px; }
+
+#caption {
+  grid-column: 1;
+  display: flex;
+  align-items: center;
+  margin-left: 8px;
+  overflow: hidden;
+  font-family: "Segoe UI", sans-serif;
+  font-size: 0.75rem; }
+  #caption span {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    line-height: 1.5; }
 
 #sys-btns {
   display: grid;
@@ -69,73 +57,38 @@ body {
   position: absolute;
   top: 0;
   right: 0;
-  height: 100%; }
+  height: 100%;
+  -webkit-app-region: no-drag; }
+  #sys-btns .button {
+    grid-row: 1 / span 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%; }
+    #sys-btns .button:hover {
+      background: rgba(255, 255, 255, 0.1); }
+    #sys-btns .button:active {
+      background: rgba(255, 255, 255, 0.2); }
+  #sys-btns #min-button {
+    grid-column: 1; }
+  #sys-btns #max-button,
+  #sys-btns #restore-button {
+    grid-column: 2; }
+  #sys-btns #close-button {
+    grid-column: 3; }
+    #sys-btns #close-button:hover {
+      background: #e81123 !important; }
+    #sys-btns #close-button:active {
+      filter: brightness(80%); }
 
-#sys-btns .button {
-  grid-row: 1 / span 1;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%; }
-
-#min-button {
-  grid-column: 1; }
-
-#max-button,
 #restore-button {
-  grid-column: 2; }
-
-#close-button {
-  grid-column: 3; }
+  display: none !important; }
 
 @media (-webkit-device-pixel-ratio: 1.5), (device-pixel-ratio: 1.5), (-webkit-device-pixel-ratio: 2), (device-pixel-ratio: 2), (-webkit-device-pixel-ratio: 3), (device-pixel-ratio: 3) {
   #sys-btns .icon {
     width: 10px;
     height: 10px; } }
-
-#sys-btns {
-  -webkit-app-region: no-drag; }
-
-#sys-btns .button {
-  user-select: none; }
-
-#sys-btns .button:hover {
-  background: rgba(255, 255, 255, 0.1); }
-
-#sys-btns .button:active {
-  background: rgba(255, 255, 255, 0.2); }
-
-#close-button:hover {
-  background: #e81123 !important; }
-
-#close-button:active {
-  filter: brightness(80%); }
-
-#close-button:active .icon {
-  filter: invert(1); }
-
-#restore-button {
-  display: none !important; }
-
-#titlebar #drag-region {
-  display: grid;
-  grid-template-columns: auto 138px; }
-
-#window-title {
-  grid-column: 1;
-  display: flex;
-  align-items: center;
-  margin-left: 8px;
-  overflow: hidden;
-  font-family: "Segoe UI", sans-serif;
-  font-size: 12px; }
-
-#window-title span {
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  line-height: 1.5; }
 
 .maximized #titlebar {
   width: 100%;
@@ -150,6 +103,12 @@ body {
 .maximized #max-button {
   display: none; }
 
+#main {
+  height: calc(100% - 32px);
+  margin-top: 32px;
+  padding: 20px;
+  overflow-y: auto; }
+
 textarea {
   width: 100%; }
 
@@ -157,3 +116,7 @@ textarea {
   border: 1px solid #999999;
   margin: 5px 0;
   padding: 3px; }
+
+p {
+  margin-top: 10px;
+  color: gray; }
