--- a/css/style.scss
+++ b/css/style.scss
@@ -45,7 +45,7 @@ $TITLEBAR_HEIGHT: 30px;
     height: 100%;
     -webkit-app-region: drag;
     display: grid;
-    grid-template-columns: 16px auto 138px;
+    grid-template-columns: 30px auto 138px;
     grid-auto-rows: ($TITLEBAR_HEIGHT - 8);
   }
 }
@@ -58,11 +58,88 @@ $TITLEBAR_HEIGHT: 30px;
   }
 }
 
+#sys-menus {
+  grid-column: 2;
+  // background-color: red;
+  ul {
+    font-size: 0.8rem;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    margin-right: 16px;
+    overflow: hidden;
+
+    li {
+      -webkit-app-region: no-drag;
+      height: $TITLEBAR_HEIGHT;
+      // margin: -4px 0px;
+      text-decoration: none;
+      float: left;
+      // padding: 6px 8px;
+      // display: block;
+      // color: white;
+      // text-decoration: none;
+
+      a,
+      .dropbtn {
+        margin: -4px 0px;
+        display: inline-block;
+        color: white;
+        text-align: center;
+        padding: 6px 8px;
+        text-decoration: none;
+      }
+
+      a:hover,
+      .dropdown:hover .dropbtn {
+        background-color: red;
+      }
+
+      .dropdown {
+        display: inline-block;
+
+        &:hover {
+          .dropdown-content {
+            display: block;
+          }
+        }
+      }
+
+      .dropdown-content {
+        display: none;
+        position: absolute;
+        background-color: #f9f9f9;
+        min-width: 160px;
+        box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+        z-index: 1;
+
+        a {
+          color: black;
+          padding: 12px 16px;
+          text-decoration: none;
+          display: block;
+          text-align: left;
+        }
+
+        a:hover {
+          background-color: #f1f1f1;
+        }
+      }
+
+      // .dropdown:hover .dropdown-content {
+      //   display: block;
+      // }
+    }
+  }
+}
+
 #caption {
+  // background-color: orange;
   grid-column: 2;
   margin: 0 ($TITLEBAR_HEIGHT * 15/30);
   display: flex;
-  align-items: center;
+  justify-content: center;
+  // align-items: center;
   overflow: hidden;
   font-family: "Segoe UI", sans-serif;
   // font-size: calc(12 / 16) rem;
