--- a/css/style - Copy.css
+++ b/css/style - Copy.css
@@ -2,16 +2,16 @@
 *:before,
 *:after {
   -webkit-box-sizing: inherit;
-          box-sizing: inherit;
+  box-sizing: inherit;
   -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 html {
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 html,
@@ -35,7 +35,7 @@ body {
 #titlebar {
   display: block;
   position: fixed;
-  height: 32px;
+  height: 30px;
   width: calc(100% - 2px);
   /*Compensate for body 1px border*/
   background: #254053;
@@ -49,13 +49,12 @@ body {
   -webkit-app-region: drag;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 30px 180px auto 138px;
-      grid-template-columns: 30px 180px auto 138px;
-  grid-auto-rows: 24px;
+  -ms-grid-columns: 30px auto 138px;
+  grid-template-columns: 30px 170px auto 138px;
+  grid-auto-rows: 22px;
 }
 
 #app-icon {
-  -ms-grid-column: 1;
   grid-column: 1;
 }
 
@@ -65,101 +64,85 @@ body {
 }
 
 #sys-menus {
-  -ms-grid-column: 2;
   grid-column: 2;
-  position: absolute;
-  height: 100%;
-  top: 0;
-  left: 30px;
-  margin: 0;
 }
 
 #sys-menus ul {
-  display: table;
   font-size: 0.8rem;
+  list-style-type: none;
   margin: 0;
+  padding: 0;
+  margin-right: 16px;
   overflow: hidden;
-  height: 100%;
 }
 
 #sys-menus ul li {
-  padding: 10px;
-  display: table-cell;
-  margin: 0;
-  height: 100%;
   -webkit-app-region: no-drag;
-  display: inline-block;
-  text-align: center;
-  text-decoration: none;
-  color: white;
+  /* height: 30px; */
+  /* text-decoration: none; */
+  float: left;
 }
 
-#sys-menus ul li span {
-  margin: 0;
-  padding: 6px 8px;
-}
-
-#sys-menus ul li:hover {
-  background-color: orangered;
-}
-
-#sys-menus ul li .dropdown:hover .dropbtn {
-  background-color: green;
-}
-
-#sys-menus ul li .dropdown-content {
+#sys-menus ul li a,
+#sys-menus ul li .dropbtn {
   display: block;
+  color: white;
+  text-align: center;
+  padding: 6px 8px;
+  margin: -4px 0px;
+  text-decoration: none;
+}
+
+li a:hover,
+.dropdown:hover .dropbtn {
+  background-color: red;
+}
+
+li.dropdown {
+  display: block;
+}
+
+.dropdown-content {
+  display: none;
   position: absolute;
-  top: 32px;
-  background-color: #34434e;
-  min-width: 200px;
+  top: 30px;
+  background-color: #254053;
+  min-width: 160px;
+  text-align: left;
+  /* box-shadow: 0px 2px 4px 0px rgba(255, 2550, 255, 0.2); */
   z-index: 1;
 }
 
-#sys-menus ul li .dropdown-content .divider {
-  border-top: solid 1px gray;
-  height: 1px;
-  padding: 0;
-  margin: 0 10px;
-}
-
-#sys-menus ul li .dropdown-content li {
-  display: block;
-  margin: 4px 0;
-  padding: 2px 26px;
+.dropdown-content a {
+  display: inline-block;
+  color: black;
+  padding: 4px;
   text-decoration: none;
-  text-align: left;
+  vertical-align: middle;
 }
 
-#sys-menus ul li .dropdown-content a:hover {
-  background-color: #f1f1f156;
+.dropdown-content a:hover {
+  background-color: rgb(60, 96, 122);
 }
 
-#sys-menus ul li .dropdown-content .disabled {
-  color: darkgray;
-}
-
-#sys-menus ul li .dropdown-content .disabled:hover {
-  background-color: transparent;
-}
-
-#sys-menus ul li .dropdown:hover .dropdown-content {
+/* show submenu*/
+.dropdown:hover .dropdown-content {
   display: block;
 }
 
 #caption {
-  -ms-grid-column: 3;
-  grid-column: 3;
-  margin: 0 16px;
+  /* -ms-grid-column: 2; */
+  /* grid-column: 3; */
+  margin: 0 15px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   overflow: hidden;
   font-family: "Segoe UI", sans-serif;
-  font-size: 0.8rem;
+  font-size: 0.75rem;
 }
 
 #caption span {
@@ -170,16 +153,14 @@ body {
 }
 
 #sys-btns {
-  -ms-grid-column: 4;
-  grid-column: 4;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (46px)[3];
-      grid-template-columns: repeat(3, 46px);
+  -ms-grid-columns: (46px) [3];
+  grid-template-columns: repeat(3, 46px);
   position: absolute;
-  height: 100%;
   top: 0;
   right: 0;
+  height: 100%;
   -webkit-app-region: no-drag;
 }
 
@@ -191,11 +172,11 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   width: 100%;
   height: 100%;
 }
@@ -230,14 +211,19 @@ body {
 
 #sys-btns #close-button:active {
   -webkit-filter: brightness(80%);
-          filter: brightness(80%);
+  filter: brightness(80%);
 }
 
 #restore-button {
   display: none !important;
 }
 
-@media (-webkit-device-pixel-ratio: 1.5), (device-pixel-ratio: 1.5), (-webkit-device-pixel-ratio: 2), (device-pixel-ratio: 2), (-webkit-device-pixel-ratio: 3), (device-pixel-ratio: 3) {
+@media (-webkit-device-pixel-ratio: 1.5),
+  (device-pixel-ratio: 1.5),
+  (-webkit-device-pixel-ratio: 2),
+  (device-pixel-ratio: 2),
+  (-webkit-device-pixel-ratio: 3),
+  (device-pixel-ratio: 3) {
   #sys-btns .icon {
     width: 10px;
     height: 10px;
