--- a/css/style.scss
+++ b/css/style.scss
@@ -29,7 +29,8 @@ body {
   color: #fff;
 }
 
-$TITLEBAR_HEIGHT: 30px;
+$TITLEBAR_HEIGHT: 32px;
+$APPICON_SIZE: 30px;
 
 #titlebar {
   display: block;
@@ -45,7 +46,7 @@ $TITLEBAR_HEIGHT: 30px;
     height: 100%;
     -webkit-app-region: drag;
     display: grid;
-    grid-template-columns: 30px auto 138px;
+    grid-template-columns: $APPICON_SIZE 180px auto 138px;
     grid-auto-rows: ($TITLEBAR_HEIGHT - 8);
   }
 }
@@ -60,82 +61,100 @@ $TITLEBAR_HEIGHT: 30px;
 
 #sys-menus {
   grid-column: 2;
-  // background-color: red;
+
+  position: absolute;
+  height: 100%;
+  top: 0;
+  left: $APPICON_SIZE;
+  margin: 0;
   ul {
+    display: table;
     font-size: 0.8rem;
-    list-style-type: none;
+    // list-style-type: none;
     margin: 0;
-    padding: 0;
-    margin-right: 16px;
     overflow: hidden;
-
+    height: 100%;
     li {
+      padding: 10px;
+      display: table-cell;
+
+      margin: 0;
+      height: 100%;
+      // .dropdown > .dropbtn(Root menu) > .dropdown-content
       -webkit-app-region: no-drag;
-      height: $TITLEBAR_HEIGHT;
-      // margin: -4px 0px;
-      text-decoration: none;
-      float: left;
-      // padding: 6px 8px;
-      // display: block;
-      // color: white;
-      // text-decoration: none;
-
-      a,
-      .dropbtn {
-        margin: -4px 0px;
-        display: inline-block;
-        color: white;
-        text-align: center;
+      // float: left;
+      span {
+        margin: 0;
         padding: 6px 8px;
-        text-decoration: none;
       }
 
-      a:hover,
+      // padding: 6px 8px;
+      display: inline-block;
+      text-align: center;
+      text-decoration: none;
+      color: white;
+
+      &:hover {
+        background-color: orangered;
+      }
+
       .dropdown:hover .dropbtn {
-        background-color: red;
+        background-color: green;
       }
 
-      .dropdown {
-        display: inline-block;
-
-        &:hover {
-          .dropdown-content {
-            display: block;
-          }
-        }
-      }
+      // .dropdown {
+      //   display: block;
+      // }
 
       .dropdown-content {
-        display: none;
+        display: block;
         position: absolute;
-        background-color: #f9f9f9;
-        min-width: 160px;
-        box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+        top: $TITLEBAR_HEIGHT;
+        background-color: #34434e;
+        min-width: 200px;
+        //box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
         z-index: 1;
+        // margin: 16px 0;
 
-        a {
-          color: black;
-          padding: 12px 16px;
-          text-decoration: none;
+        .divider {
+          border-top: solid 1px gray;
+          // clear: both;
+          height: 1px;
+          padding: 0;
+          margin: 0 10px;
+        }
+
+        li {
           display: block;
+          margin: 4px 0;
+          padding: 2px 26px;
+          text-decoration: none;
           text-align: left;
         }
 
         a:hover {
-          background-color: #f1f1f1;
+          background-color: #f1f1f156;
+        }
+        .disabled {
+          color: darkgray;
+          &:hover {
+            background-color: transparent;
+          }
         }
       }
 
-      // .dropdown:hover .dropdown-content {
-      //   display: block;
-      // }
+      .dropdown:hover {
+        .dropdown-content {
+          display: block;
+        }
+      }
     }
   }
 }
 
 #caption {
   // background-color: orange;
-  grid-column: 2;
+  grid-column: 3;
   margin: 0 ($TITLEBAR_HEIGHT * 15/30);
   display: flex;
   justify-content: center;
@@ -153,12 +172,13 @@ $TITLEBAR_HEIGHT: 30px;
   }
 }
 #sys-btns {
+  grid-column: 4;
   display: grid;
   grid-template-columns: repeat(3, 46px);
   position: absolute;
+  height: 100%;
   top: 0;
   right: 0;
-  height: 100%;
 
   -webkit-app-region: no-drag;
 
