--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,11 @@
           user-select: none;
 }
 
+* {
+  margin: 0;
+  padding: 0;
+}
+
 html {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -33,25 +38,29 @@ body {
 }
 
 #titlebar {
+  font-family: "Segoe UI", sans-serif;
+  padding: 0;
+  margin: 0;
   display: block;
   position: fixed;
   height: 32px;
   width: calc(100% - 2px);
   /*Compensate for body 1px border*/
   background: #254053;
-  padding: 4px;
-  color: #fff;
+  color: lightgray;
 }
 
 #titlebar #drag-region {
+  padding: 0;
+  margin: 0;
   width: 100%;
   height: 100%;
   -webkit-app-region: drag;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 30px 180px auto 138px;
-      grid-template-columns: 30px 180px auto 138px;
-  grid-auto-rows: 24px;
+  -ms-grid-columns: 30px fit-content(300px) auto fit-content(200px);
+      grid-template-columns: 30px fit-content(300px) auto fit-content(200px);
+  grid-auto-rows: 32px;
 }
 
 #app-icon {
@@ -60,97 +69,104 @@ body {
 }
 
 #app-icon img {
-  margin: -3px;
-  height: 130%;
+  height: 100%;
 }
 
-#sys-menus {
+.nav-area {
   -ms-grid-column: 2;
   grid-column: 2;
-  position: absolute;
-  height: 100%;
-  top: 0;
-  left: 30px;
-  margin: 0;
-}
-
-#sys-menus ul {
-  display: table;
-  font-size: 0.8rem;
-  margin: 0;
-  overflow: hidden;
-  height: 100%;
-}
-
-#sys-menus ul li {
-  padding: 10px;
-  display: table-cell;
-  margin: 0;
-  height: 100%;
   -webkit-app-region: no-drag;
-  display: inline-block;
-  text-align: center;
-  text-decoration: none;
-  color: white;
+  margin-left: 10px;
+  font-size: 0.8rem;
+  text-overflow: ellipsis;
 }
 
-#sys-menus ul li span {
-  margin: 0;
-  padding: 6px 8px;
-}
-
-#sys-menus ul li:hover {
-  background-color: orangered;
-}
-
-#sys-menus ul li .dropdown:hover .dropbtn {
-  background-color: green;
-}
-
-#sys-menus ul li .dropdown-content {
-  display: block;
-  position: absolute;
-  top: 32px;
-  background-color: #34434e;
-  min-width: 200px;
-  z-index: 1;
-}
-
-#sys-menus ul li .dropdown-content .divider {
-  border-top: solid 1px gray;
-  height: 1px;
+.nav-area ul {
+  height: 100%;
   padding: 0;
-  margin: 0 10px;
+  margin: 0;
+  list-style: none;
+  background: #254053;
 }
 
-#sys-menus ul li .dropdown-content li {
-  display: block;
-  margin: 4px 0;
-  padding: 2px 26px;
+.nav-area li {
+  padding: 0;
+  margin: 0;
+  height: 100%;
+}
+
+.nav-area ul a {
+  color: lightgray;
+  height: 100%;
+  background: #254053;
   text-decoration: none;
-  text-align: left;
-}
-
-#sys-menus ul li .dropdown-content a:hover {
-  background-color: #f1f1f156;
-}
-
-#sys-menus ul li .dropdown-content .disabled {
-  color: darkgray;
-}
-
-#sys-menus ul li .dropdown-content .disabled:hover {
-  background-color: transparent;
-}
-
-#sys-menus ul li .dropdown:hover .dropdown-content {
+  padding: 7px 8px;
   display: block;
+}
+
+.nav-area ul ul {
+  -webkit-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+          box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+}
+
+.nav-area ul ul a {
+  padding: 7px 26px;
+}
+
+.nav-area .root-items > li {
+  float: left;
+  position: relative;
+}
+
+.nav-area ul a:hover {
+  background: #3b5365;
+}
+
+.nav-area ul ul {
+  display: none;
+  position: absolute;
+  min-width: 250px;
+  top: 100%;
+  left: 0;
+}
+
+.nav-area ul > li:hover > ul {
+  display: block;
+}
+
+.nav-area ul ul ul {
+  display: block;
+  visibility: hidden;
+  -webkit-transition-property: visibility;
+  transition-property: visibility;
+  -webkit-transition-delay: 600ms;
+          transition-delay: 600ms;
+  top: -6px;
+  left: calc(100% - 0px);
+  padding: -6px 0;
+}
+
+.nav-area ul ul li:hover > ul {
+  display: block;
+  visibility: visible;
+  -webkit-transition-property: visibility;
+  transition-property: visibility;
+  -webkit-transition-delay: 300ms;
+          transition-delay: 300ms;
+}
+
+.nav-area ul ul li {
+  position: relative;
+}
+
+.nav-area ul ul ul li:hover a {
+  background: #3b5365;
 }
 
 #caption {
   -ms-grid-column: 3;
   grid-column: 3;
-  margin: 0 16px;
+  margin: 4px 4px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -172,14 +188,11 @@ body {
 #sys-btns {
   -ms-grid-column: 4;
   grid-column: 4;
+  z-index: 100;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: (46px)[3];
       grid-template-columns: repeat(3, 46px);
-  position: absolute;
-  height: 100%;
-  top: 0;
-  right: 0;
   -webkit-app-region: no-drag;
 }
 
@@ -237,13 +250,6 @@ body {
   display: none !important;
 }
 
-@media (-webkit-device-pixel-ratio: 1.5), (device-pixel-ratio: 1.5), (-webkit-device-pixel-ratio: 2), (device-pixel-ratio: 2), (-webkit-device-pixel-ratio: 3), (device-pixel-ratio: 3) {
-  #sys-btns .icon {
-    width: 10px;
-    height: 10px;
-  }
-}
-
 .maximized #restore-button {
   display: -webkit-box !important;
   display: -ms-flexbox !important;
@@ -252,6 +258,13 @@ body {
 
 .maximized #max-button {
   display: none;
+}
+
+@media (-webkit-device-pixel-ratio: 1.5), (device-pixel-ratio: 1.5), (-webkit-device-pixel-ratio: 2), (device-pixel-ratio: 2), (-webkit-device-pixel-ratio: 3), (device-pixel-ratio: 3) {
+  #sys-btns .icon {
+    width: 10px;
+    height: 10px;
+  }
 }
 
 #main {
